--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,18 @@ footer {
   align-items: center;
   padding: 40px 20px;
 }
+
+main {
+  flex: 1;
+  display: flex;
+}
+
+#gameCanvas {
+  border: 1px solid red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  z-index: 1;
+}
